# E2E test for searching the user
appId: com.githubrepositoriesexplorer.app
env:
  Query: 'Larnex'
---
- launchApp
- assertVisible: 'Enter username'
- tapOn:
    id: 'username-input'
- inputText: ${Query}
- hideKeyboard
- tapOn:
    id: 'search-button'
